--- a/WordAsSword/Base.lproj/Main.storyboard
+++ b/WordAsSword/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -88,13 +89,36 @@
                                     <constraint firstItem="kvG-9f-LN1" firstAttribute="width" secondItem="DKZ-3v-I2h" secondAttribute="width" id="zgC-Zy-VAo"/>
                                 </constraints>
                             </view>
+                            <view alpha="0.80000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b6H-Lf-vQA" userLabel="TopView">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="20"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SomeBeginingText" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iUf-RG-ZAr">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="20"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="17"/>
+                                        <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="iUf-RG-ZAr" secondAttribute="bottom" id="1bz-OB-cP7"/>
+                                    <constraint firstItem="iUf-RG-ZAr" firstAttribute="leading" secondItem="b6H-Lf-vQA" secondAttribute="leading" id="K1l-KR-ket"/>
+                                    <constraint firstAttribute="trailing" secondItem="iUf-RG-ZAr" secondAttribute="trailing" id="ca1-JH-0eJ"/>
+                                    <constraint firstItem="iUf-RG-ZAr" firstAttribute="top" secondItem="b6H-Lf-vQA" secondAttribute="top" id="d6i-fM-niD"/>
+                                    <constraint firstItem="iUf-RG-ZAr" firstAttribute="centerY" secondItem="b6H-Lf-vQA" secondAttribute="centerY" id="fjC-qb-rwH"/>
+                                    <constraint firstItem="iUf-RG-ZAr" firstAttribute="centerX" secondItem="b6H-Lf-vQA" secondAttribute="centerX" id="lQf-RF-xAX"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="b6H-Lf-vQA" secondAttribute="trailing" id="0nH-jg-zId"/>
                             <constraint firstItem="piD-8Y-P5J" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="1Yq-jP-1iv"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="E1N-qk-kSG" secondAttribute="bottom" id="2hR-P2-906"/>
                             <constraint firstAttribute="trailing" secondItem="piD-8Y-P5J" secondAttribute="trailing" id="Bwx-27-imp"/>
                             <constraint firstItem="piD-8Y-P5J" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="MXi-Ps-cwu"/>
+                            <constraint firstItem="b6H-Lf-vQA" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="dLx-lI-2QY"/>
+                            <constraint firstItem="b6H-Lf-vQA" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="euo-bg-hYS"/>
                             <constraint firstItem="E1N-qk-kSG" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="pUU-rV-qmS"/>
                             <constraint firstAttribute="trailing" secondItem="E1N-qk-kSG" secondAttribute="trailing" id="xBu-aG-Va1"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="piD-8Y-P5J" secondAttribute="bottom" id="xhY-QP-yOh"/>
@@ -105,6 +129,7 @@
                     <nil key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="MainTextField" destination="piD-8Y-P5J" id="rEk-0w-rzJ"/>
+                        <outlet property="TopLabel" destination="iUf-RG-ZAr" id="iq0-uP-Up7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
